2013-06-21  Xavier Perseguers  <xavier@typo3.org>

	* [TASK] Raise compatibility to TYPO3 4.7.99 (known to work)

2010-06-10  Xavier Perseguers  <typo3@perseguers.ch>

	* [BUGFIX] #8124: User mapping is not taken into account

2009-12-12 Steffen Kamper <info@sk-typo3.de>

	* [TASK] Initial code generated with kickstarter