@@ -34,7 +34,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'cms' => '',
 			'php' => '5.0.0-5.4.99',
-			'typo3' => '4.3.0-4.7.99',
+			'typo3' => '4.5.0-4.7.99',
 			'tt_news' => '3.0.1-3.9.99',
 		),
 		'conflicts' => array(
