@@ -1,5 +1,6 @@
 2013-06-21  Xavier Perseguers  <xavier@typo3.org>
 
+	* [TASK] Cleanup and monster import from Jigal's fixes
 	* [TASK] Raise compatibility to TYPO3 4.7.99 (known to work)
 
 2010-06-10  Xavier Perseguers  <typo3@perseguers.ch>
